[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxis-mcp"
version = "0.1.0"
description = "MCP Server for interacting with Red Hat Pyxis service"
authors = [
    {name = "Adam Miller", email = "admiller@redhat.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
pyxis-mcp = "pyxis_mcp.server:main"

[project.urls]
Homepage = "https://github.com/admiller/pyxis-mcp-server"
Repository = "https://github.com/admiller/pyxis-mcp-server"
Issues = "https://github.com/admiller/pyxis-mcp-server/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyxis_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true